# RustConv

./: .gitignore  Cargo.toml  README.md  diff_test1.json  diff_test2.json  git_push.command  sample.csv  sample.json  sample.toml  sample.xml  sample.yaml  test_batch.yaml  test_invalid.json  test_merge1.json  test_merge2.json  test_patch.json  test_query.json  test_schema.json  test_template.json  test_valid.json  test_vars.yaml
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/cli/commands/: auto.rs  batch.rs  completions.rs  convert.rs  csv.rs  diff.rs  json.rs  merge.rs  mod.rs  patch.rs  query.rs  schema.rs  template.rs  toml.rs  validate.rs  xml.rs  yaml.rs
src/core/: batch.rs  converter.rs  differ.rs  merger.rs  mod.rs  patcher.rs  query.rs  schema.rs  template.rs  validator.rs
src/formats/: csv.rs  detect.rs  json.rs  mod.rs  toml.rs  xml.rs  yaml.rs
src/utils/: highlight.rs  mod.rs
